# numerical_pdes

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
generate_data/: base_pde_solver_1d.py  run_numerical_pde_solver.py  solution_data.py
generate_data/base_solvers/: __init__.py  base_pde_solver_1d.py
generate_data/equation_solvers/: __init__.py  base_pde_solver_1d.py  burgers_equation_solver.py  wave_equation_solver.py
generate_data/utils/: __init__.py  errors.py  functions.py  plot_solutions.py  time_stepping_methods.py
generate_data/wave_equation/: wave_equation_solver.py  wave_sys_exact_data.f95
scripts/: run_simulation.py
src/numerical_pdes/: __init__.py  boundary_conditions.py  mesh.py  plotting.py  reconstruction.py  solution.py  solver.py  time_integrators.py
src/numerical_pdes/equations/: __init__.py  base.py  burgers_equation.py  wave_equation.py
src/numerical_pdes/utils/: __init__.py  errors.py  functions.py
